# KLife

./: CMakeLists.txt
src/: AbstractAlgorithm.cpp  AbstractAlgorithm.h  AbstractFileFormat.cpp  AbstractFileFormat.h  AlgorithmManager.cpp  AlgorithmManager.h  BigInteger.cpp  BigInteger.h  CMakeLists.txt  CanvasPainter.cpp  CanvasPainter.h  Config.h.cmake  DataChannel.cpp  DataChannel.h  Editor.cpp  Editor.h  FileFormatManager.cpp  FileFormatManager.h  HashLife.cpp  HashLife.h  KLifeui.rc  MainCanvas.cpp  MainCanvas.h  MainWindow.cpp  MainWindow.h  MemoryManager.cpp  MemoryManager.h  NaiveLife.cpp  NaiveLife.h  RLEFormat.cpp  RLEFormat.h  Rule.cpp  Rule.h  RuleLife.cpp  RuleLife.h  TextStream.cpp  TextStream.h  TreeLife.cpp  TreeLife.h  TreeUtils.cpp  (+4 more)
